@@ -7,7 +7,7 @@ Add save credits support for Bow & Arrow
 Fix neverending sounds on LTD system 4 games, added sound support for Cowboy Eight Ball and Zephy
 Fix S.A.M. PulseSolState (needed for mech) and bug in Family Guy mini-playfield lights and move the (non-modulated) LED outputs in Tron LE that occupied columns 8 and 9 so far (i.e. disabling the start button lamps) to cols 11 and 12
 Implement 'fast flips' support for some S.A.M. games: Recommended table implementation is to use direct/fast flipper flips when solenoid 33 is on, but to respond to the standard flipper solenoids when 33 is off
- (trn_174h, acd_168h, mtl_170h, twd_160h, wof_500, st_161h, xmn_151h, fg_1200, potc_600, im_183ve, avr_200, avs_170, wpt_140a, tf_180h, bdk_294, shr_141, bbh_170, smanve_101)
+ (trn_174h, acd_168h, mtl_170h, twd_160h, wof_500, st_161h, xmn_151h, fg_1200, potc_600, im_183ve, avr_200, avs_170, wpt_140a, tf_180h, bdk_294, shr_141, bbh_170, smanve_101, nba_802)
 Fix some (unfortunately not all) AT91 JIT crashes (i.e. S.A.M. and Whitestar II)
 
 *** ROM SUPPORT *** Thanks to Destruk, ipdb.org, inkochnito, Chad Hendrickson, John Mohr, Soren, Robotworkshop, mIKL
@@ -33,6 +33,7 @@ Earthshaker PA-4
 Embryon v92 (7-digit conversion and more)
 Frontier (Gate Fix)
 Galaxy (Planet Skillshot)
+Game Show LU-3 (Europe),LG-6 (German)
 High Speed L-4C (competition MOD)
 Meteor (No Background Sound)
 Pool Sharks LA-7C (competition MOD)
